<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/settings"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <Button
            android:id="@+id/install"
            android:text="@string/main_activity_install_button_text_not_installed"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/window"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="48dp"
            android:text="@string/main_activity_window_button_enable" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/settings"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start"
            android:text="@string/main_activity_start_button_text"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="48dp"
            android:layout_below="@+id/start"
            android:text="@string/main_activity_stop_button_text" />

    </LinearLayout>


    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/controls"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content" />

</RelativeLayout>
